@@ -82,7 +82,7 @@ function install_pkg
 	(( $(id -u) != 0 )) && error "${package}: must be installed as root"
 
 	# Configure install-log.
-	cat >/etc/install-log.rc <<-"EOF"
+	cat > /etc/install-log.rc <<- "EOF"
 		INCLUDE=/bin:/sbin:/lib:/usr:/opt
 		EXCLUDE=/lib/modules:/usr/src:/usr/local/src:/usr/etc:/usr/share/info/dir:/usr/local/share/info/dir:/usr/share/man/whatis:/usr/local/share/man/whatis
 		LOGDIR=/var/log/install-logs
