@@ -1,3 +1,8 @@
+2005-06-15 Gareth Jones <gareth_jones@users.berlios.de>
+
+	* x86stepping/Makefile: Added build flags.
+	* Makefile.defs: Removed x86stepping build flags.
+
 2005-06-06 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
 	* profiles/lfs-6.1/module-init-tools.pkg: Fixed instructions to ensure
